--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/Salemoche/SVG-Animations/issues"
   },
-  "homepage": "https://github.com/Salemoche/SVG-Animations#readme"
+  "homepage": "https://github.com/Salemoche/SVG-Animations#readme",
+  "dependencies": {
+    "gsap": "^2.0.1"
+  }
 }
